[gd_scene load_steps=4 format=3 uid="uid://cqjjwtbvpynvc"]

[ext_resource type="Script" uid="uid://ct60gkav8ksyh" path="res://scripts/breakable.gd" id="1_iiu7q"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7aw1n"]
size = Vector2(40, 40)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iiu7q"]
size = Vector2(40, 40)

[node name="Box_Test" type="StaticBody2D"]
script = ExtResource("1_iiu7q")
max_hp = 0

[node name="SolidCollision" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_7aw1n")

[node name="Hurtbox" type="Area2D" parent="."]

[node name="HurtboxCollision" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource("RectangleShape2D_iiu7q")

[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]
